@@ -27,6 +27,8 @@ PHP                                                                        NEWS
 - Standard:
   . Fixed bug GH-10990 (mail() throws TypeError after iterating over
     $additional_headers array by reference). (nielsdos)
+  . Fixed bug GH-9775 (Duplicates returned by array_unique when using enums).
+    (ilutov)
 
 13 Apr 2023, PHP 8.1.18
 
